@@ -335,7 +335,9 @@ static void check_session_exit(void)
 	    R_Suicide(_("error during cleanup\n"));
 	else {
 	    exiting = TRUE;
-	    if (GetOption1(install("error")) != R_NilValue) {
+	    if (GetOption1(install("error")) != R_NilValue ||
+		GetOption1(install("catch.script.errors"))
+		) {
 		exiting = FALSE;
 		return;
 	    }
