@@ -95,7 +95,7 @@ sink("no-segfault.R")
 
 if(.Platform$OS.type == "unix") cat('options(pager = "cat")\n')
 if(.Platform$OS.type == "windows") cat('options(pager = "console")\n')
-cat('options(error=expression(NULL))',
+cat("options(catch.script.errors = TRUE)",
     "# don't stop on error in batch\n##~~~~~~~~~~~~~~\n")
 
 cat(".libPaths(tail(.libPaths(), 1), include.site=FALSE) # no extra libraries (w/ many pkgs)\n")
