@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2022-03-19 r81942) -- "Unsuffered Consequences"
-Copyright (C) 2022 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+R Under development (unstable) (2023-10-20 r85375) -- "Unsuffered Consequences"
+Copyright (C) 2023 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -18,9 +18,10 @@ Type 'q()' to quit R.
 > #### STRICT test suite in the spirit of no-segfaults,
 > #### but with explicit statements.
 > 
-> options(error=expression(NULL))
-> stop("test of `options(error=expression(NULL))'")
-Error: test of `options(error=expression(NULL))'
+> tools::assertError(options(catch.script.errors = NA)) # TRUE or FALSE
+> options(catch.script.errors = TRUE)
+> stop("test of 'options(catch.script.errors = TRUE)'")
+Error: test of 'options(catch.script.errors = TRUE)'
 > 
 > if(FALSE) {
 + ## these ought to work on machines with enough memory
